# canal

./: LICENSE  README.md  canal.hpp
core/dsp/: dsp.hpp
core/dsp/iir_filter/: butter_bp.cpp  butter_bp.cpp~  butter_bp.hpp  butter_hp.cpp  butter_hp.cpp~  butter_hp.hpp  butter_hp.hpp~  butter_lp.cpp  butter_lp.cpp~  butter_lp.hpp  iir_base.cpp  iir_base.cpp~  iir_base.hpp  iir_base.hpp~
core/dsp/misc_fun/: freqz_dat.hpp  freqz_dat.hpp~  sig_proc_fcn.cpp  sig_proc_fcn.cpp~  sig_proc_fcn.hpp  sig_proc_fcn.hpp~
core/math/: complex.cpp  complex.hpp  math_fcn.cpp  math_fcn.cpp~  math_fcn.hpp  math_vector.cpp  math_vector.hpp  matrix.cpp  matrix.cpp~  matrix.hpp  matrix.hpp~
core/statistics/: normals.cpp  normals.hpp  park_miller.cpp  park_miller.cpp~  park_miller.hpp  park_miller.hpp~  random.cpp  random.hpp  stats.hpp  stats_fcn.cpp  stats_fcn.cpp~  stats_fcn.hpp  stats_fcn.hpp~
data_struct/lists/: list.cpp  list.hpp
examples/filters/: butt_high_synthesis_freqz.cpp  butt_high_synthesis_freqz.cpp~  butt_low_synthesis_impulse_response.cpp  butt_low_synthesis_impulse_response.cpp~  test_bhp_coeff.cpp~  test_bhp_mag_response.cpp~  test_bhp_mag_response_b.cpp~  test_blp.cpp  test_blp.cpp~  test_high_butt_filter.cpp~
examples/kalman/: CMakeLists.txt  kalman_filter_1D.cpp  kalman_filter_1D.cpp~  kf
examples/matrix/: CMakeLists.txt  m_lib  m_rng  main_matrix.cpp  matrix_random_gen.cpp  test_matrix_lib.cpp  test_matrix_lib.cpp~
examples/random_number_generator/: vec_test3.cpp
examples/vector/: CMakeLists.txt  v  v3  vec_test2.cpp~  vec_test3.cpp~
pyplotcpp/: b
vec_ops/: #heper_fcn.hpp#  .#heper_fcn.hpp  helper_fcn.cpp  helper_fcn.cpp~  helper_fcn.hpp  heper_fcn.hpp~  lseq.hpp  lseq.hpp~
